--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ authors = [{name='tschm', email='tschm@mailinator.com'}]
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "numpy>=2.3.0",
+    "scikit-learn>=1.7.2",
+    "scipy>=1.16.3",
 ]
 
 [project.urls]
