--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,3 +43,6 @@ exclude_dirs = ["tests"]
 [tool.deptry]
 # see https://deptry.com/usage/#pep-621-dev-dependency-groups
 pep621_dev_dependency_groups = ["dev"]
+
+[tool.deptry.per_rule_ignores]
+DEP002 = ["scipy","scikit-learn"]
