Update template.yml to modify included and excluded files
Removed 'taskfiles' from include and added 'exclude' section.

--- a/.github/template.yml
+++ b/.github/template.yml
@@ -2,7 +2,6 @@ template-repository: "tschm/.config-templates"
 template-branch: "main"
 include: |
     .github
-    taskfiles
     tests
     .editorconfig
     .gitignore
@@ -11,4 +10,5 @@ include: |
     CONTRIBUTING.md
     Makefile
     ruff.toml
-    Taskfile.yml
+exclude: |
+    .github/workflows/docker.yml
