--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = 'jsharpe'
 version = "0.0.0"
 description = "Sharpe ratio"
 # Please add authors and correct the email...
-authors = [{name='tschm', email='tschm@mailinator.com'}]
+authors = [{name='Thomas Schmelzer', email='thomas@jqr.ae'}]
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
@@ -21,6 +21,7 @@ dev = [
     "pytest>=8.3.3",
     "pre-commit>=4.0.1",
     "marimo==0.18.1",
+    "cvxpy>=1.7.0"
 ]
 
 [build-system]
