--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "numpy>=2.3.0",
     "scikit-learn>=1.7.2",
     "scipy>=1.16.3",
+    "pandas>=1.3.5",
+    "matplotlib>=1.5.3",
 ]
 
 [project.urls]
