--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "numpy>=2.3.0",
-    "scipy>=1.16.3",
-    "pandas>=1.3.5",
+    "scipy>=1.16.3"
 ]
 
 [project.urls]
