--- a/ruff.toml
+++ b/ruff.toml
@@ -87,5 +87,5 @@ line-ending = "auto"
                                                     # naming conventions (e.g., SR, T, K) in tests
 "src/**/*.py" = ["N802", "N803", "N806"]  # Allow mathematical naming conventions
                                           # (e.g., SR=Sharpe Ratio, T=time, K=trials, V=variance matrix)
-"book/marimo/*.py" = ["N803", "S101"]  # Allow non-lowercase variable names (N803)
+"book/marimo/*.py" = ["N802", "N803", "N806", "S101"]  # Allow non-lowercase variable names (N803)
                                        # and assert statements in marimo files
