--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,13 +2,23 @@
 name = 'jsharpe'
 version = "0.0.2"
 description = "Sharpe ratio"
-# Please add authors and correct the email...
 authors = [{name='Thomas Schmelzer', email='thomas@jqr.ae'}]
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "numpy>=2.3.0",
     "scipy>=1.16.3"
+]
+license = { file="LICENSE" }
+keywords = ["sharpe ratio", "quant", "risk", "statistics"]
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
+    "Topic :: Scientific/Engineering :: Mathematics",
 ]
 
 [project.urls]
@@ -23,7 +33,6 @@ dev = [
     "marimo==0.18.2",
     "cvxpy>=1.7.0",
     "pdoc>=16.0.0"
-
 ]
 
 [build-system]
@@ -40,12 +49,7 @@ include = [
     "src/jsharpe"
 ]
 
-[tool.bandit]
-exclude_dirs = ["tests"]
-
 [tool.deptry]
 # see https://deptry.com/usage/#pep-621-dev-dependency-groups
 pep621_dev_dependency_groups = ["dev"]
 
-[tool.deptry.per_rule_ignores]
-DEP002 = ["scipy"]
