--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -40,9 +40,17 @@ jobs:
         with:
           lfs: true
 
+      # Determine the Python version to use
+      - name: Get Python version
+        id: get-python
+        run: |
+          echo "python-version=$(python ./.github/workflows/scripts/version_max.py)" >> "$GITHUB_OUTPUT"
+
       # Use the composite action to set up the project
       - name: Setup the project
         uses: ./.github/actions/setup-project
+        with:
+          python-version: ${{ steps.get-python.outputs.python-version }}
 
       - name: "Make the book"
         run: |
