--- a/.github/actions/setup-project/action.yml
+++ b/.github/actions/setup-project/action.yml
@@ -104,3 +104,7 @@ runs:
         else
           echo "No pyproject.toml found, skipping package installation"
         fi
+
+    - name: "Install the package in development mode"
+      shell: bash
+      run: pip install -e .
