--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,11 +46,11 @@ dev = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.hatch.build]
-include = ["LICENSE", "README.md"]
+#[tool.hatch.build]
+#include = ["LICENSE", "README.md"]
 
-[tool.hatch.build.targets.wheel]
-packages = ["src/jsharpe"]
+#[tool.hatch.build.targets.wheel]
+#packages = ["src/jsharpe"]
 
 [tool.deptry]
 pep621_dev_dependency_groups = ["dev"]
