--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,8 @@ dev = [
     "pre-commit>=4.0.1",
     "marimo==0.18.4",
     "cvxpy>=1.7.0",
-    "pdoc>=16.0.0"
+    "pdoc>=16.0.0",
+    "jinja2>=3.1.6"
 ]
 
 [build-system]
