remove traces of tschm/.config-templates

--- a/.github/workflows/structure.yml
+++ b/.github/workflows/structure.yml
@@ -1,5 +1,5 @@
-# This file is part of the tschm/.config-templates repository
-# (https://github.com/tschm/.config-templates).
+# This file is part of the jebel-quant/rhiza repository
+# (https://github.com/jebel-quant/rhiza).
 #
 # GitHub Actions workflow: repository structure advisory checks
 # Purpose: Soft-check the presence of common scaffolding (src/, tests/, and key dotfiles)
